# sentinel

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  sarif-upload.yml
docs/: ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  CHECKLIST.md  COMPARISON.md  ROADMAP.md  VERSION_COMPARISON.md
examples/: sample_api.yaml  sample_report.md
patterns/: injection.yaml
scripts/: run_benchmarks.py
sentinel/: __init__.py  __main__.py  agent.py  auth.py  autonomous.py  chat.py  html_reporter.py  json_reporter.py  main.py  models.py  parser.py  passive.py  plugin.py  postman.py  proxy.py  reporter.py
sentinel/attacks/: __init__.py  auth.py  cmd_injection.py  idor.py  injection.py  jwt.py  rate_limit.py  ssrf.py  xss.py
sentinel/benchmarks/: __init__.py  framework.py  importer.py
test_server/: Dockerfile  README.md  openapi.json  vulnerable_api.py
tests/: conftest.py
tests/benchmarks/: test_functional.py
tests/e2e/: test_e2e.py
tests/integration/: test_autonomous_integration.py
tests/unit/: test_agent.py  test_attacks.py  test_auth.py  test_benchmark.py  test_chat.py  test_html_reporter.py  test_idor_attack.py  test_importer.py  test_json_reporter.py  test_models.py  test_openapi_31.py  test_parser.py  test_passive.py  test_plugin.py  test_postman.py  test_proxy.py  test_reporter.py
