[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-security"
version = "2.0.0"
description = "AI-Native API Security Testing Tool - Automated vulnerability detection for REST APIs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sentinel Security Team", email = "security@example.com"}
]
maintainers = [
    {name = "Sentinel Security Team", email = "security@example.com"}
]
keywords = [
    "security",
    "api",
    "penetration-testing",
    "vulnerability-scanner",
    "owasp",
    "ai",
    "llm",
    "openapi",
    "swagger",
    "sarif"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6.4",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "google-generativeai>=0.3.2",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "PyJWT>=2.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests",
    "types-PyYAML"
]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0"
]
all = [
    "sentinel-security[dev,server]"
]

[project.scripts]
sentinel = "sentinel.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/sentinel"
Documentation = "https://github.com/yourusername/sentinel#readme"
Repository = "https://github.com/yourusername/sentinel.git"
Issues = "https://github.com/yourusername/sentinel/issues"
Changelog = "https://github.com/yourusername/sentinel/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

[tool.setuptools.package-data]
sentinel = ["py.typed", "patterns/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests"
]

[tool.coverage.run]
source = ["sentinel"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/main.py"  # CLI entry point - tested via integration tests
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:"
]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
